WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275691
[WebGPU] errorValidatingDynamicOffsets can be bypassed in setBindGroup
https://bugs.webkit.org/show_bug.cgi?id=275691
Summary
[WebGPU] errorValidatingDynamicOffsets can be bypassed in setBindGroup
Mike Wyrzykowski
Reported
2024-06-20 09:00:02 PDT
[WebGPU] errorValidatingDynamicOffsets can be bypassed in setBindGroup
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-20 09:00:34 PDT
radar://130148080
Mike Wyrzykowski
Comment 2
2024-06-20 09:03:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30004
EWS
Comment 3
2024-06-28 10:06:01 PDT
Committed
280458@main
(efa8149ffba6): <
https://commits.webkit.org/280458@main
> Reviewed commits have been landed. Closing PR #30004 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug