[WebGPU] errorValidatingDynamicOffsets can be bypassed in setBindGroup https://bugs.webkit.org/show_bug.cgi?id=275691 <radar://130148080>

Reviewed by Tadeu Zagallo.

Switch add -> set in HashMap call, add was unintentional.

* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::ComputePassEncoder::setBindGroup):

Canonical link: https://commits.webkit.org/280458@main